Update BaseMachineRecipeBuilder.java